Corrigindo erros de pesquisa e responsividade

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/styles.css">
+    <link rel="icon" href="./src/img/favicon.png" type="image/x-icon">
     <title>Consultando CEP</title>
 </head>
 
@@ -14,7 +15,7 @@
         <div id="container-search-cep">
             <h1 id="titulo">Buscar um CEP</h1>
             <div>
-                <input name="searchCep" type="text" id="searchCep" maxlength="9" autocomplete="off">
+                <input name="searchCep" type="text" id="searchCep" maxlength="8" placeholder="Digite aqui..." autocomplete="off">
                 <input type="button" value="Buscar" id="btnBuscar">
             </div>
         </div>
@@ -29,6 +30,10 @@
             </form>
         </div>
     </main>
+    <footer>
+        <p>Desenvolvido por <a href="https://github.com/Nilson-Rodrigues?tab=repositories">Nilson Rodrigues</a> ©
+            copyright</p>
+    </footer>
     <script src="./src/js/script_buscar_cep.js">
 
     </script>
